--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,4 +1,4 @@
-<navbar></navbar>
+<!-- <navbar></navbar>
 
 <header class="hero-unit" id="banner">
   <div class="container">
@@ -20,3 +20,5 @@
 </div>
 
 <footer></footer>
+ -->
+<main-app></main-app>
