added pie to paper-elements

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,8 @@
     <!-- CUSTOM ELEMENTS -->
     <link rel="import" href="elements/elements.html">
     <link rel="import" href="elements/main-app/main-app.html">
-
+    <link rel="import" href="elements/pie-status/pie-status.html">
+    <link rel="import" href="elements/pie-status/pie-status2.html">
     <!--[if lt IE 7]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
