added pie to paper-elements

--- a/client/elements/main-app/main-app.html
+++ b/client/elements/main-app/main-app.html
@@ -71,6 +71,14 @@
           <paper-material class="recent-badges">
             Recent badges:
           </paper-material>
+          <paper-material style="height: 500px">
+            Progress Wheel:
+            <pie-status></pie-status>
+          </paper-material>
+          <paper-material style="height: 450px">
+            Progress Wheel 2:
+            <pie-status2></pie-status2>
+          </paper-material>
           <paper-material>
             Become a master of:
           </paper-material>
