added pie to paper-elements

--- a/client/elements/main-app/main-app.html
+++ b/client/elements/main-app/main-app.html
@@ -77,6 +77,14 @@
             Progress Wheel 2:
             <pie-status2></pie-status2>
           </paper-material>
+          <paper-material style="height: 500px">
+            Progress Wheel:
+            <pie-status></pie-status>
+          </paper-material>
+          <paper-material style="height: 450px">
+            Progress Wheel 2:
+            <pie-status2></pie-status2>
+          </paper-material>
           <paper-material>
             <paper-toolbar class="cardheader"><div class="headertitle">Become a Master:</div></paper-toolbar>
             <div class="content">wat goes here</div>
