--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
     <link rel="import" href="elements/elements.html">
   </head>
   <body ng-app="hrr10MjbeApp" unresolved class="fullbleed layout vertical">
- 
+
     <!--[if lt IE 7]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -101,20 +101,22 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/s/s.js"></script>
+      <script src="app/s/s.controller.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/account/signup/signup.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/about/about.controller.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/badges/badges.controller.js"></script>
+      <script src="app/badges/badges.js"></script>
       <script src="app/directives/bindPolymer/bindPolymer.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/profile/profile.controller.js"></script>
       <script src="app/profile/profile.js"></script>
-      <script src="app/s/s.controller.js"></script>
       <script src="app/about/about.js"></script>
+      <script src="app/s/s.js"></script>
       <script src="app/services/problems/problems.service.js"></script>
       <script src="app/services/skills/skills.service.js"></script>
       <script src="app/account/account.js"></script>
