--- a/client/index.html
+++ b/client/index.html
@@ -31,19 +31,10 @@
     <link rel="import" href="bower_components/polymer/polymer.html">
     <link rel="import" href="bower_components/iron-icons/iron-icons.html">
 
-    <!-- POLYMER ELEMENTS -->
-    <link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
-    <link rel="import" href="bower_components/paper-header-panel/paper-header-panel.html">
-    <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
-    <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
-    <link rel="import" href="bower_components/paper-card/paper-card.html">
-    <link rel="import" href="bower_components/paper-button/paper-button.html">
-    <link rel="import" href="bower_components/paper-material/paper-material.html">
-    <link rel="import" href="bower_components/paper-item/paper-item.html">
-    <link rel="import" href="bower_components/paper-menu/paper-menu.html">
-
     <!-- CUSTOM ELEMENTS -->
+    <link rel="import" href="elements/elements.html">
     <link rel="import" href="elements/main-app/main-app.html">
+
     <!--[if lt IE 7]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -106,3 +97,11 @@
     <!-- endbuild -->
   </body>
 </html>
+
+
+Eric
+Jeff
+Omar
+Eugene
+Andrew
+Paul
