--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -11,3 +11,6 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+
+
+<!-- CUSTOM ELEMENTS -->
