moved elements into elements.html

--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -14,3 +14,6 @@
 
 
 <!-- CUSTOM ELEMENTS -->
+<link rel="import" href="main-app/main-app.html">
+<link rel="import" href="pie-status/pie-status.html">
+<link rel="import" href="pie-status/pie-status2.html">
