drawing on canvas works

--- a/client/elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html
+++ b/client/elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html
@@ -18,6 +18,7 @@
         },
         ready: function() {
           var canvas = new fabric.Canvas('canvas');
+          canvas.isDrawingMode = true;
 
         var rect = new fabric.Rect({
             top : 100,
