working on resizing drawing canvas

--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,9 @@
             </paper-tabs>
           </div>
         </paper-toolbar>
+        <div class="content">
     <ui-view></ui-view>
+    </div>
      </paper-header-panel>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
