--- a/client/elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html
+++ b/client/elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html
@@ -1,37 +1,43 @@
 <script src="../../bower_components/fabric.js/dist/fabric.js"></script>
+<link rel="import" href="../../bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
 <dom-module id="mjbe-drawing-canvas">
   <template>
-   <canvas id="canvas" width="300" height="300"></canvas>   
+    <canvas id="canvas"></canvas>
   </template>
-
-  <script>
-    (function () {
-      'use strict';
-
-      Polymer({
-        is: 'mjbe-drawing-canvas',
-        properties: {
-          items: {
-            type: Array,
-            notify: true,
-          }
-        },
-        ready: function() {
-          var canvas = new fabric.Canvas('canvas');
-          canvas.isDrawingMode = true;
-
-        var rect = new fabric.Rect({
-            top : 100,
-            left : 100,
-            width : 60,
-            height : 70,
-            fill : 'red'
-        });
-
-        canvas.add(rect);
-        }
-      });
-    })();
-  </script>
-
+<script>
+(function () {
+  'use strict';
+Polymer({
+  is: 'mjbe-drawing-canvas',
+  behaviors: [
+    Polymer.IronResizableBehavior
+  ],
+  properties: {
+    fabricCanvas: Object
+  },
+  listeners: {
+    'iron-resize': '_onIronResize'
+  },
+  attached: function() {
+    this.fabricCanvas = new fabric.Canvas('canvas');
+    this.fabricCanvas.isDrawingMode = true;
+    this.async(this.notifyResize, 1);
+  },
+  get parent() {
+    if (this.parentNode.nodeType === Node.DOCUMENT_FRAGMENT_NODE) {
+      return this.parentNode.host;
+    }
+    return this.parentNode;
+  },
+  _onIronResize: function() {
+    var x = Math.floor(this.parent.offsetWidth);
+    var y = Math.floor(this.parent.offsetHeight);
+    this.$.canvas.setAttribute('width', x + 'px');
+    this.$.canvas.setAttribute('height', y + 'px');
+    this.fabricCanvas.setWidth(x);
+    this.fabricCanvas.setHeight(y);
+  }
+});
+}());
+</script>
 </dom-module>
