--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -18,3 +18,4 @@
 <link rel="import" href="pie-status/pie-status.html">
 <link rel="import" href="pie-status/pie-status2.html">
 <link rel="import" href="problems-addition/problems-addition.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
