--- a/client/index.html
+++ b/client/index.html
@@ -101,7 +101,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/s/s.controller.js"></script>
+      <script src="app/profile/profile.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/account/signup/signup.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
@@ -113,9 +113,10 @@
       <script src="app/directives/bindPolymer/bindPolymer.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/problems/generator.js"></script>
       <script src="app/profile/profile.controller.js"></script>
-      <script src="app/profile/profile.js"></script>
       <script src="app/about/about.js"></script>
+      <script src="app/s/s.controller.js"></script>
       <script src="app/s/s.js"></script>
       <script src="app/services/problems/problems.service.js"></script>
       <script src="app/services/skills/skills.service.js"></script>
