basic addition problem generator

--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -17,3 +17,4 @@
 <link rel="import" href="main-app/main-app.html">
 <link rel="import" href="pie-status/pie-status.html">
 <link rel="import" href="pie-status/pie-status2.html">
+<link rel="import" href="problems-addition/problems-addition.html">
