--- a/client/elements/main-app/main-app.html
+++ b/client/elements/main-app/main-app.html
@@ -68,6 +68,11 @@
             <paper-toolbar class="cardheader"><div class="headertitle">Recent Badges</div></paper-toolbar>
             <div class="content">LOL no badges so far</div>
           </paper-material>
+          <!-- Testing for problems polymer element -->
+          <paper-material>
+            <paper-toolbar class="cardheader"><div class="headertitle">Basic Addition</div></paper-toolbar>
+            <problems-addition>
+          </paper-material>
           <paper-material style="height: 500px">
             Progress Wheel:
             <pie-status></pie-status>
@@ -84,7 +89,7 @@
             <paper-toolbar class="cardheader"><div class="headertitle">Currently Working On:</div></paper-toolbar>
             <div class="content">wat goes here</div>
           </paper-material>
-          <ui-view></ui-view>
+         <ui-view></ui-view>
         </div>
      
   </template>
