--- a/client/index.html
+++ b/client/index.html
@@ -103,6 +103,8 @@
       <script src="app/about/about.js"></script>
       <script src="app/account/account.js"></script>
       <script src="components/auth/auth.service.js"></script>
+      <script src="app/problems/generator.js"></script>
+      <script src="app/account/login/login.controller.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
       <script src="components/auth/user.service.js"></script>
