basic addition problem generator

--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,7 @@
       <script src="app/app.constant.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/problems/generator.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="app/account/login/login.controller.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
