--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -11,7 +11,7 @@
 <link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
 <link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
-
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
 <!-- CUSTOM ELEMENTS -->
 <link rel="import" href="main-app/main-app.html">
