--- a/client/elements/mjbe-drawing-canvas/x-app.html
+++ b/client/elements/mjbe-drawing-canvas/x-app.html
@@ -7,89 +7,75 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-
 <link rel="import" href="../../bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
-
 <dom-module id="x-puck">
-
   <style>
-    :host {
-      display: inline-block;
-    }
+  :host {
+    display: inline-block;
+  }
   </style>
-
   <template>
-
-    <b>I'm a resize-aware, thirdifying puck at (<span>{{x}}</span> x <span>{{y}}</span>).</b>
-    <canvas id="canvas" style="background-color: #000"></canvas>
-
+    <canvas id="canvas" style="background-color: #bbb" width="200" height="200"></canvas>
   </template>
-
 </dom-module>
-
 <script>
-  Polymer({
-    is: 'x-puck',
-    behaviors: [
-      Polymer.IronResizableBehavior
-    ],
-    properties: {
-      x: {
-        type: Number,
-        value: 0
-      },
-      y: {
-        type: Number,
-        value: 0
-      }
-    },
-    listeners: {
-      'iron-resize': '_onIronResize'
-    },
-    attached: function() {
-      this.async(this.notifyResize, 1);
-    },
-    get parent() {
-      if (this.parentNode.nodeType === Node.DOCUMENT_FRAGMENT_NODE) {
-        return this.parentNode.host;
-      }
-      return this.parentNode;
-    },
-    _onIronResize: function() {
-      var x = this.x = Math.floor(this.parent.offsetWidth);
-      var y = this.y = Math.floor(this.parent.offsetHeight);
-      this.$.canvas.setAttribute('width', x + 'px');
-      this.$.canvas.setAttribute('height', y + 'px');
-    }
-  });
+Polymer({
+  is: 'x-puck',
+  behaviors: [
+    Polymer.IronResizableBehavior
+  ],
+  listeners: {
+    'iron-resize': '_onIronResize'
+  },
+  attached: function() {
+    var canvas = new fabric.Canvas('canvas');
+    canvas.isDrawingMode = true;
+
+    var rect = new fabric.Rect({
+      top: 100,
+      left: 100,
+      width: 60,
+      height: 70,
+      fill: 'red'
+    });
+
+    canvas.add(rect);
+  this.async(this.notifyResize, 1);
+},
+get parent() {
+  if (this.parentNode.nodeType === Node.DOCUMENT_FRAGMENT_NODE) {
+    return this.parentNode.host;
+  }
+  return this.parentNode;
+},
+_onIronResize: function() {
+  var x = this.x = Math.floor(this.parent.offsetWidth);
+  var y = this.y = Math.floor(this.parent.offsetHeight);
+  //this.$.canvas.setAttribute('width', x + 'px');
+  //this.$.canvas.setAttribute('height', y + 'px');
+}
+});
 </script>
-
 <dom-module id="x-app">
-
   <style>
-    :host {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-    }
+  :host {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
   </style>
-
   <template>
-
     <x-puck></x-puck>
-
   </template>
-
 </dom-module>
-
 <script>
-  Polymer({
-    is: 'x-app',
-    behaviors: [
-      Polymer.IronResizableBehavior
-    ]
-  });
+Polymer({
+  is: 'x-app',
+  behaviors: [
+    Polymer.IronResizableBehavior
+  ]
+});
 </script>
