--- a/client/elements/mjbe-drawing-canvas/x-app.html
+++ b/client/elements/mjbe-drawing-canvas/x-app.html
@@ -61,7 +61,7 @@ _onIronResize: function() {
 }
 });
 </script>
-<dom-module id="x-app">
+<!--<dom-module id="x-app">
   <style>
   :host {
     display: block;
@@ -83,4 +83,4 @@ Polymer({
     Polymer.IronResizableBehavior
   ]
 });
-</script>
+</script>-->
