--- a/client/elements/mjbe-drawing-canvas/x-app.html
+++ b/client/elements/mjbe-drawing-canvas/x-app.html
@@ -1,21 +1,7 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
 <link rel="import" href="../../bower_components/iron-resizable-behavior/iron-resizable-behavior.html">
 <dom-module id="x-puck">
-  <style>
-  :host {
-    display: inline-block;
-  }
-  </style>
   <template>
-    <canvas id="canvas" width="200" height="200"></canvas>
+    <canvas id="canvas"></canvas>
   </template>
 </dom-module>
 <script>
@@ -33,54 +19,21 @@ Polymer({
   attached: function() {
     this.fabricCanvas = new fabric.Canvas('canvas');
     this.fabricCanvas.isDrawingMode = true;
-
-    var rect = new fabric.Rect({
-      top: 100,
-      left: 100,
-      width: 60,
-      height: 70,
-      fill: 'red'
-    });
-
-    this.fabricCanvas.add(rect);
-  this.async(this.notifyResize, 1);
-},
-get parent() {
-  if (this.parentNode.nodeType === Node.DOCUMENT_FRAGMENT_NODE) {
-    return this.parentNode.host;
+    this.async(this.notifyResize, 1);
+  },
+  get parent() {
+    if (this.parentNode.nodeType === Node.DOCUMENT_FRAGMENT_NODE) {
+      return this.parentNode.host;
+    }
+    return this.parentNode;
+  },
+  _onIronResize: function() {
+    var x = Math.floor(this.parent.offsetWidth);
+    var y = Math.floor(this.parent.offsetHeight);
+    this.$.canvas.setAttribute('width', x + 'px');
+    this.$.canvas.setAttribute('height', y + 'px');
+    this.fabricCanvas.setWidth(x);
+    this.fabricCanvas.setHeight(y);
   }
-  return this.parentNode;
-},
-_onIronResize: function() {
-  var x = Math.floor(this.parent.offsetWidth);
-  var y = Math.floor(this.parent.offsetHeight);
-  this.$.canvas.setAttribute('width', x + 'px');
-  this.$.canvas.setAttribute('height', y + 'px');
-  this.fabricCanvas.setWidth(x);
-  this.fabricCanvas.setHeight(y);
-}
 });
 </script>
-<!--<dom-module id="x-app">
-  <style>
-  :host {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-  </style>
-  <template>
-    <x-puck></x-puck>
-  </template>
-</dom-module>
-<script>
-Polymer({
-  is: 'x-app',
-  behaviors: [
-    Polymer.IronResizableBehavior
-  ]
-});
-</script>-->
