--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -1,4 +1,6 @@
 <link rel="import" href="elements/mjbe-drawing-canvas/mjbe-drawing-canvas.html">
+<link rel="import" href="elements/problems-addition/problems-addition.html">
 <!--<link rel="import" href="elements/mjbe-problem-view/mjbe-problem-view.html">-->
 <!--<mjbe-problem-view></mjbe-problem-view>-->
 <mjbe-drawing-canvas></mjbe-drawing-canvas>
+<problems-addition></problems-addition>
