--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -2,5 +2,5 @@
 <link rel="import" href="elements/problems-addition/problems-addition.html">
 <!--<link rel="import" href="elements/mjbe-problem-view/mjbe-problem-view.html">-->
 <!--<mjbe-problem-view></mjbe-problem-view>-->
-<mjbe-drawing-canvas></mjbe-drawing-canvas>
+<mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>
 <problems-addition></problems-addition>
