--- a/client/elements/mjbe-problem-view/mjbe-problem-view.html
+++ b/client/elements/mjbe-problem-view/mjbe-problem-view.html
@@ -1,9 +1,8 @@
 <dom-module id="mjbe-problem-view">
 <style>
 paper-material {
-        top: 100px;
-        height: 250px;
-        max-width: 400px;
+        width: 400px;
+        height: 150px;
         margin: 16px auto;
         background-color: #eee;
         text-align: center;
