--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -26,14 +26,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: #F5A503;
        
       }
-    </style>
 
+      paper-material {
+        top: 100px;
+        height: 250px;
+        max-width: 400px;
+        margin: 16px auto;
+        background-color: #eee;
+        text-align: center;
+}
+    </style>
+ <paper-material elevation="1" horizontal layout>
     <div class="container">What is <span><strong>{{question}}</strong></span> ?</div>
     <input value="{{studentAnswer::input}}">
 
     <!-- <paper-button class="submit" on-tap="plzwork">Submit</paper-button> -->
     <paper-fab icon="send" on-tap="plzwork"></paper-fab>
     <p>{{message}}</p>
+    </paper-material>
 
   </template>
   <script>
