Added Location Map, Routing, Buttons

--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@
             <paper-tabs>
               <paper-tab>Home</paper-tab>
               <paper-tab ui-sref="profile">Profile</paper-tab>
-              <paper-tab>Progress</paper-tab>
+              <paper-tab ui-sref="about">About</paper-tab>
               <paper-tab>Badges</paper-tab>
               <paper-tab>Sign Out</paper-tab>
             </paper-tabs>
@@ -108,6 +108,7 @@
       <script src="app/directives/bindPolymer/bindPolymer.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/problems/generator.js"></script>
       <script src="app/profile/profile.controller.js"></script>
       <script src="app/profile/profile.js"></script>
       <script src="app/about/about.js"></script>
