Working on Routing. Needs Adjustment. Pushing for consistency.

--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -15,6 +15,8 @@
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/google-map/google-map.html">
 <link rel="import" href="../bower_components/point-overlay/point-overlay.html">
+<link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+
 
 <!-- CUSTOM ELEMENTS -->
 <link rel="import" href="main-app/main-app.html">
