Adjusted for About Index Overlap (Still needs adjustment)

--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,5 +1,4 @@
-<link rel="import" href="../../bower_components/polymer/polymer.html">
-
+<about-us></about-us>
 <dom-module id="about-us">
   <template>
     <paper-tabs selected="{{selected}}">
