--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -24,4 +24,4 @@
 <link rel="import" href="pie-status/pie-status2.html">
 <link rel="import" href="problems-addition/problems-addition.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
-<link rel="import" href="../app/about/about.html">
+<link rel="import" href="about-us/about-us.html">
