--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -37,49 +37,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 }
     </style>
  <paper-material elevation="1" horizontal layout>
-    <div class="container">What is <span><strong>{{questionStr}}</strong></span> ?</div>
+    <div class="container">What is <span><strong>{{question.nums.0}} {{question.operator}} {{question.nums.1}}</strong></span> ?</div>
     <input value="{{studentAnswer::input}}">
 
     <!-- <paper-button class="submit" on-tap="plzwork">Submit</paper-button> -->
-    <paper-fab icon="send" on-tap="plzwork"></paper-fab>
+    <paper-fab icon="send" on-tap="evaluate"></paper-fab>
     <p>{{message}}</p>
     </paper-material>
 
   </template>
   <script src="../../lib/mpgen.js"></script>
   <script>
-    console.log(mpgen.simpleAddition(0, 1000));
-    var generator = function() {
-      var randInt = function (max) {
-        return Math.ceil(Math.random() * max);
-      };
-
-      var x = Math.ceil(Math.random() * 10);
-      var y = Math.ceil(Math.random() * 10);
-      var operator = ['+', '-', '*'][Math.floor(Math.random() * 3)];
-      return x + ' ' + operator + ' ' + y;
-    }
-    // var answerChecker = function(query) {
-    //   console.log('inside answerChecker');
-    //   console.log(this.studentAnswer);
-
-    //   if(query === 2) {
-    //     alert('Correct!');
-    //   } else {
-    //     alert(this.studentAnswer);
-    //   }
-    // };
-
     Polymer({
       is: 'problems-addition',
 
       properties: {
-        questionStr: {
-          type: String,
-          value: generator(),
+        question: {
+          type: Object,
+          value: mpgen.simpleAddition(0, 100),
           notify: true
         },
-
+        
         studentAnswer: {
           type: Number,
           notify: true
@@ -90,14 +68,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       },
 
-      plzwork: function() {
-        if (this.studentAnswer == eval(this.questionStr)) {
+      evaluate: function() {
+        if (this.studentAnswer == this.question.answer) {
           this.message = 'Correct!';
         } else {
           this.message = 'Incorrect. :(';
         }
         this.studentAnswer = '';
-        this.question = generator();
+        this.question = mpgen.simpleAddition(0, 100);
       }
     });
   </script>
