add Problems service

--- a/client/index.html
+++ b/client/index.html
@@ -113,6 +113,7 @@
       <script src="app/profile/profile.js"></script>
       <script src="app/about/about.js"></script>
       <script src="app/s/s.js"></script>
+      <script src="app/services/problems/problems.service.js"></script>
       <script src="app/account/account.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
