--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -33,13 +33,27 @@
   </template>
   <script src="../../lib/mpgen.js"></script>
   <script>
+  //TODO this should not go here
+  function getProblemBySetId(id) {
+    console.log(id);
+    if (id === 0) {
+      return mpgen.simpleAddition(0, 10);
+    }
+     else if (id === 1) {
+      return mpgen.simpleAddition(0, 1000);
+    }
+     if (id === 2) {
+      return mpgen.simpleSubtraction(0, 10);
+    }
+  }
+  
   Polymer({
     is: 'problems-addition',
 
     properties: {
       question: {
         type: Object,
-        computed: 'getProblem(problemtype)',
+        computed: 'getProblem(problemtype, changed)',
         notify: true
       },
 
@@ -54,16 +68,17 @@
 
       problemtype: {
         type: Number
+      },
+
+      changed: {
+        type: Number,
+        value: 0,
+        notify: true
       }
     },
 
     getProblem: function() {
-      console.log('srg');
-      if (this.problemtype === 5) {
-        return mpgen.simpleAddition(0, 100);
-      } else {
-        return mpgen.simpleMultiplication(0, 100);
-      }
+      return getProblemBySetId(this.problemtype);
     },
 
     evaluate: function() {
@@ -73,7 +88,7 @@
         this.message = 'Incorrect. :(';
       }
       this.studentAnswer = '';
-      this.question = mpgen.simpleAddition(0, 100);
+      this.changed++;
     }
   });
   </script>
