--- a/client/app/s/s.html
+++ b/client/app/s/s.html
@@ -3,4 +3,4 @@
 <!--<link rel="import" href="elements/mjbe-problem-view/mjbe-problem-view.html">-->
 <!--<mjbe-problem-view></mjbe-problem-view>-->
 <mjbe-drawing-canvas class="fit"></mjbe-drawing-canvas>
-<problems-addition problemtype={{type}}></problems-addition>{{message}}
+<problems-addition problemtype={{type}}></problems-addition>
