--- a/client/elements/main-app/main-app.html
+++ b/client/elements/main-app/main-app.html
@@ -63,6 +63,17 @@
    
 
         <!-- Main Content -->
+         <div class="container">
+      <div class="row">
+        <h1>Demo</h1>
+        <p>
+          <label for="f_name">First Name:</label>
+          <input type="text" ng-model="f_name">
+        </p>
+        
+        <name-card id="test" first="{{f_name}}" last="{{l_name}}" bind-polymer></name-card>
+      </div>
+    </div>
           <paper-material class="recent-badges">
             <paper-toolbar class="cardheader"><div class="headertitle">Recent Badges</div></paper-toolbar>
             <div class="content">LOL no badges so far</div>
