switch to ids, slight cleanup

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -21,8 +21,7 @@
 
 <footer></footer>
  -->
-
-    <input type="text" ng-model="test">
-    <pie-status test="{{test}}" bind-polymer></pie-status>
- <link rel="import" href="elements/main-app/main-app.html">
+<input type="text" ng-model="userselection">
+<pie-status userselection="{{userselection}}" bind-polymer></pie-status>
+<link rel="import" href="elements/main-app/main-app.html">
 <main-app></main-app>
