fix drawing canvas bug

--- a/client/index.html
+++ b/client/index.html
@@ -65,7 +65,6 @@
   
     <ui-view class="fit"></ui-view>
     </div>
-    <ui-view></ui-view>
 
      </paper-header-panel>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -92,6 +91,7 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
+      <script src="bower_components/fabric.js/dist/fabric.min.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
