fixed about page

--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,2 +1,56 @@
 <about-us></about-us>
 
+=======
+<!-- <dom-module id="about-us"> -->
+  <section>
+    <paper-tabs selected="0">
+      <paper-tab>Our Vision</paper-tab>
+      <paper-tab>About Us</paper-tab>
+      <paper-tab>Contact</paper-tab>
+    </paper-tabs>
+  
+    <iron-pages selected="0">
+      <div>One</div>
+      
+      <div>
+      Hello
+<!--           <template is="dom-bind" id="t">
+            <google-map map="{{map}}" latitude="38.6" longitude="-100" zoom="4" style="height:600px"
+            styles='[{"stylers":[{"saturation":-85}]},{"featureType":"water","stylers":[{"lightness":-20}]}]'
+            on-zoom-changed="setPointSize" on-google-map-ready="setPointSize">
+            </google-map>
+            <point-overlay map="[[map]]" uniforms="{{uniforms}}" data='[{"lat": 34.05227, "lng": -118.243474}, 
+              "lng": -75.9180003}]'>
+            </point-overlay>
+          </template> -->
+
+      </div>
+      
+      <div>Three</div>
+    </iron-pages>
+  </section>
+
+
+  <script>
+    // var t = document.querySelector('#t');
+    //   t.setPointSize = function(e) {
+    //   this.uniforms.pointSize = Math.exp(0.6 * this.map.getZoom());
+    //   this.notifyPath('uniforms.pointSize', this.uniforms.pointSize);
+    // };
+  
+    // document.addEventListener('click', function(e) {
+    //   var pages = document.querySelector('iron-pages');
+    //   pages.selectNext();
+    // });
+  
+    Polymer({
+      is: 'about-us',
+      properties: {
+        selected: {
+          type: Number,
+          value: 0
+        }
+      }
+    });
+  </script>
+<!-- </dom-module> -->
