--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,7 @@
      <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="bower_components/polymer/polymer.html">
     <link rel="import" href="bower_components/iron-icons/iron-icons.html">
+    <link rel="import" href="bower_components/paper-input/paper-input.html">
 
     <!-- CUSTOM ELEMENTS -->
     <link rel="import" href="elements/elements.html">
