iron-ajax working in polymer

--- a/client/index.html
+++ b/client/index.html
@@ -92,6 +92,7 @@
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
       <script src="bower_components/fabric.js/dist/fabric.min.js"></script>
+      <script src="bower_components/promise-polyfill/Promise.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js(.tmp) app/app.js -->
