--- a/client/elements/elements.html
+++ b/client/elements/elements.html
@@ -16,6 +16,7 @@
 <link rel="import" href="../bower_components/google-map/google-map.html">
 <link rel="import" href="../bower_components/point-overlay/point-overlay.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 
 
 <!-- CUSTOM ELEMENTS -->
