--- a/client/elements/pie-status/pie-status.html
+++ b/client/elements/pie-status/pie-status.html
@@ -1,6 +1,13 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <dom-module id="pie-status">
   <template>
+  <iron-ajax
+    auto
+    url="/api/skills"
+    handle-as="json"
+    on-response="handleResponse"
+    last-response="{{ajaxResponse}}"
+    debounce-duration="300"></iron-ajax>
     <div id="holder">
       <style include="shared-styles"></style>
       <style>
@@ -27,7 +34,12 @@
       },
       userselection: {
         notify: true,
-      }
+      },
+    },
+
+    handleResponse: function(response) {
+      console.log('got a response');
+      console.log(this.ajaxResponse);
     },
 
     ready: function() {
