--- a/client/elements/problems-addition/problems-addition.html
+++ b/client/elements/problems-addition/problems-addition.html
@@ -29,7 +29,7 @@
       <input value="{{studentAnswer::input}}">
       <paper-fab icon="send" on-tap="evaluate"></paper-fab>
       <p>{{message}}</p>
-      <p>{{correctCount}} correct</p>
+      <p>{{correctcount}} correct</p>
     </paper-material>
   </template>
   <script src="../../lib/mpgen.js"></script>
@@ -77,15 +77,15 @@
         notify: true
       },
 
-      correctCount: {
+      correctcount: {
         type: Number,
         value: 0,
         notify: true
       },
 
       complete: {
-        type: Boolean,
-        value: false,
+        type: String,
+        value: 'false',
         notify: true
       }
     },
@@ -97,13 +97,13 @@
     evaluate: function() {
       if (this.studentAnswer == this.question.answer) {
         this.message = 'Correct!';
-        this.correctCount++;
-        if (this.correctCount > 4) {
-          this.complete = true;
+        this.correctcount++;
+        if (this.correctcount > 4) {
+          this.complete = 'true';
         }
       } else {
         this.message = 'Incorrect. :(';
-        this.correctCount = 0;
+        this.correctcount = 0;
       }
       this.studentAnswer = '';
       this.changed++;
